made history page the landing page

--- a/src/main/resources/templates/history.html
+++ b/src/main/resources/templates/history.html
@@ -437,10 +437,10 @@
           Now that you know the epic story of memes and programmers, it's time to add your own chapter 
           to this legendary tale!
         </p>
-        <a href="/" class="home-btn">
-          <i class="fas fa-rocket"></i>
-          Start Creating Memes
-        </a>
+                 <a href="/generator" class="home-btn">
+           <i class="fas fa-rocket"></i>
+           Start Creating Memes
+         </a>
       </div>
     </div>
   </div>
